Fix padding and overflow on content dashboard

--- a/app/assets/stylesheets/pages/_statistics.scss
+++ b/app/assets/stylesheets/pages/_statistics.scss
@@ -7,6 +7,8 @@
 .content-dashboard--statistics {
   min-height: calc(100vh - 120px);
   width: 100%;
+  padding: 24px;
+  overflow: hidden;
 }
 
 .content-chart {
