--- a/app/assets/stylesheets/pages/_writing.scss
+++ b/app/assets/stylesheets/pages/_writing.scss
@@ -1,3 +1,7 @@
+body {
+  height: auto;
+}
+
 .content-dashboard--writing {
   background-color: white;
 }
